# online-cinema

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: main.py
app/api/: actor.py  admin.py  auth.py  cart.py  favorite.py  genre.py  movie.py  order.py  payment.py  review.py  users.py
app/core/: celery_app.py  config.py  deps.py  security.py  stripe.py
app/crud/: activation_token.py  actor.py  cart.py  favorite.py  genre.py  movie.py  order.py  password_reset_token.py  payment.py  review.py  user.py  user_group.py  user_movie_access.py  user_profile.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 24170b779211_add_password_reset_token_model.py  30cb83ab7d27_add_user_group_model.py  32c98cd3f327_add_favorite_model.py  673607624769_add_user_movie_access_model.py  6a03b0a61835_add_order_and_order_item_models.py  89bf84f575f1_add_cart_and_cart_item_models.py  (+6 more)
app/models/: activation_token.py  actor.py  cart.py  cart_item.py  favorite.py  genre.py  movie.py  order.py  order_item.py  password_reset_token.py  payment.py  payment_item.py  review.py  user.py  user_group.py  user_movie_access.py  user_profile.py
app/schemas/: actor.py  auth.py  cart.py  favorite.py  genre.py  movie.py  order.py  payment.py  review.py  user.py  user_group.py  user_movie_access.py  user_profile.py
app/services/: auth.py  email.py
app/tasks/: cleanup.py
docker/nginx/: default.conf
