[tool.poetry]
name = "online-cinema"
version = "0.1.0"
description = "Backend for online cinema platform"
authors = ["Maksym Dazidov <maksymdazidov@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web
fastapi = "0.136.3"
uvicorn = { extras = ["standard"], version = "0.49.0" }

# Database
sqlalchemy = "2.0.50"
alembic = "1.18.4"
asyncpg = "0.31.0"
psycopg2-binary = "2.9.12"

# Validation & Settings
pydantic = "2.13.4"
pydantic-settings = "2.14.1"
email-validator = "2.3.0"

# Authentication
python-jose = { extras = ["cryptography"], version = "3.5.0" }
passlib = { extras = ["bcrypt"], version = "1.7.4" }
bcrypt = "3.2.2"

# Background Tasks
celery = "5.6.3"
redis = "6.4.0"

# External Services
stripe = "15.2.1"
aiosmtplib = "5.1.2"
httpx = "^0.28"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12"
mypy = "^1.18"
pre-commit = "^4.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4"
pytest-asyncio = "^1.2"
celery-types = "0.26.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"